Mobile: reset pin icon top to 0 to fix clipping

--- a/css/styles.css
+++ b/css/styles.css
@@ -1643,7 +1643,7 @@ body {
   .cases__pin-icon {
     width: 7px;
     height: 9px;
-    top: -1px;
+    top: 0;
     overflow: visible;
     flex-shrink: 0;
   }
